Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-2636

disconnect() callback on broker results in leaked connections

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 0.7
    • C++ Broker
    • None

    Description

      E.g. run qpid-perftest --size 10 --count 10000 --nsubs 500 --npubs 500 and then kill the client process while running. Then run qpid-stat -c. This often results in connections not being properly deleted (and still being reported by qpid-stat).

      Attachments

        Activity

          People

            gsim Gordon Sim
            gsim Gordon Sim
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: