QPID-2636: Ensure close is called for a disconnect preventing occasional leaks of abruptly terminated connections

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk@950201 13f79535-47bb-0310-9956-ffa450edef68